<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY appname "Custom Tweak">
    ]>

<resources>
    <string name="app_name">&appname;</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_settings">Settings</string>
    <string name="title_file">Files</string>
    <string name="title_import">Import</string>
    <string name="title_export">Export</string>

    <string name="title_time_remaining">Remaining Time</string>
    <string name="label_timer">00:00</string>

    <string name="hint_payload">Custom Payload</string>
    <string name="hint_sni">Server Name Indication (SNI)</string>
    <string name="hint_dns">Domain Name System</string>

    <string name="label_message">Message</string>
    <string name="label_description">DESCRIPTION MESSAGE (HTML ✓)</string>
    <string name="label_extras">EXTRAS</string>
    <string name="label_mobile_data">Mobile Data</string>
    <string name="label_block_root">Block Root</string>
    <string name="label_lock">Lock</string>
    <string name="label_password">Password</string>
    <string name="label_hwid_lock">HWID Lock</string>
    <string name="label_expire_date">Expire Date</string>
    <string name="label_unknown">(Unknown)</string>
    <string name="label_hwid">HWID (ex. hwid01)</string>
    <string name="label_export_note">Exported file will not be compatible with older versions of &appname; if any of the \'extras\' setting is checked.</string>
    <string name="label_export">EXPORT</string>
    <string name="label_file_name">FILE NAME</string>
    <string name="label_select_server">Select Server</string>
    <string name="label_select_tweaks">Select Tweaks</string>
    <string name="label_select_port">SELECT PORT</string>
    <string name="label_author">Build by CodeXS</string>
    <string name="label_start">START</string>
    <string name="label_add_time">ADD+ TIME</string>

    <string name="error_date_selected_invalid">Selected day cannot be less than today</string>

    <!--- action messages -->
    <string name="notification_channel_id">default</string>
    <string name="minimize">Minimize</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="open">Ab laugh</string>
    <string name="more">More</string>
    <string name="cancel">Cancel</string>
    <string name="wait">Wait</string>
    <string name="attention">Attention</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="open_with">Open with</string>
    <string name="clear_settings">Restore</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="settings_ImportExport">Import/Export</string>
    <string name="settings_import">Import Configuration</string>
    <string name="settings_export">Export Configuration</string>
    <string name="actived">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="reset">RESET</string>
    <string name="input_note_msg">Message/Note to users (optional)</string>
    <string name="check_date_valid">Set Date of Validity</string>
    <string name="title_extra">Extra</string>
    <string name="name_file">File Name</string>
    <string name="settings">Settings</string>
    <string name="settings_ssh">SSH Settings</string>
    <string name="ssh_server">Server</string>
    <string name="ssh_port">Port</string>
    <string name="ssh_porta_local">Local Port (Socks5)</string>
    <string name="payload">Payload</string>
    <string name="proxy_remote">Remote Proxy</string>
    <string name="proxy_ip">Proxy IP/Host</string>
    <string name="proxy_port">Port</string>
    <string name="proxy_auth">Proxy Authentication</string>
    <string name="proxy_user">Username</string>
    <string name="proxy_pass">Password</string>
    <string name="dir_name">Folder</string>
    <string name="alert_exit">Are you sure you want to leave?</string>
    <string name="alert_clear_settings">Are you sure you want to restore the default settings?</string>
    <string name="squid">(eg: Squid, Websocket)</string>
    <string name="no_value">None</string>
    <string name="blocked">Blocked</string>
    <string name="expired">Expired</string>
    <string name="title_delete_file">Delete File</string>
    <string name="alert_delete_file">Do you want to delete this file?</string>
    <string name="dir_home_name">Internal Memory</string>
    <string name="select_file_setting">Select file</string>
    <string name="title_permission_request">Grant Permission</string>
    <string name="message_permission_request">Please, it is necessary to grant the necessary permission for the application to work properly.</string>
    <string name="show_license">View Licenses</string>
    <string name="wrong_password">"Wrong Password!"</string>

    <string name="logCleared">Log cleared.</string>
    <string name="ics_openvpn_log_file">ICS OpenVPN log file</string>
    <string name="copied_entry">Copied log entry to clip board</string>
    <string name="label_has_password">This config has password, please enter it to import this config</string>
    <string name="title_restore">Restore</string>
    <string name="hint_custom">Custom Setup</string>

    <string name="category_forward_udp" translatable="false">UDP Forwarding</string>
    <string name="title_forward_udp" translatable="false">UDP Forwarding</string>
    <string name="summary_forward_udp" translatable="false">If enabled redirects requests to the remote server. If not, UDP requests will not be resolved.</string>
    <string name="title_resolver_udp" translatable="false">UDP Gateway (Remote)</string>
    <string name="summary_resolver_udp" translatable="false">Default (7300)</string>
    <string name="category_forward_dns" translatable="false">DNS Forwarding</string>
    <string name="title_forward_dns" translatable="false">Forward DNS</string>
    <string name="summary_forward_dns" translatable="false">If enabled redirects requests to the remote server. If not, the DNS requests will be resolved by the local system.</string>
    <string name="title_dns_primary" translatable="false">Primary DNS</string>
    <string name="summary_dns_primary" translatable="false">Default (1.1.1.1)</string>
    <string name="dialog_message_dns_primary" translatable="false">Type the DNS ip</string>
    <string name="category_advanced_settings" translatable="false">Advanced Settings</string>
    <string name="title_hide_log" translatable="false">Hide Log on Start</string>
    <string name="summary_hide_log" translatable="false">If the log is not enabled will be shown automatically.</string>
    <string name="title_auto_clear_log" translatable="false">Auto Clear Logs</string>
    <string name="summary_auto_clear_log" translatable="false">If enabled the logs are cleared automatically.</string>
    <string name="category_forward_port" translatable="false">Port Forwarding</string>
    <string name="title_mode_debug" translatable="false">Debug mode</string>
    <string name="summary_mode_debug" translatable="false">Allows you to see more advanced information in the logs.</string>
    <string name="title_number_max_threads" translatable="false">Maximum Number of Threads</string>
    <string name="summary_number_max_threads" translatable="false">The higher the number of Threads, the higher the power consumption and connection speed on your device.</string>
    <string name="category_filter_apps" translatable="false">Apps Filter</string>
    <string name="title_filter_apps" translatable="false">Apps Filter</string>
    <string name="title_bypass_mode" translatable="false">Bypass Mode</string>
    <string name="summary_bypass_modo" translatable="false">If enabled, traffic from selected apps will be sent directly.</string>
    <string name="title_apps_list" translatable="false">List of Apps</string>
    <string name="summary_apps_list" translatable="false">Type a package name by line. See Settings -> Apps for app package name.</string>
    <string name="category_settings_adicionais" translatable="false">Additional settings</string>
    <string name="title_mode_night" translatable="false">Night Mode (beta)</string>
    <string name="title_ping_time" translatable="false">Ping (seconds)</string>
    <string name="category_user_interface" translatable="false">User Interface</string>
    <string name="title_language" translatable="false">Language</string>
    <string name="category_tunnel" translatable="false">Tunnel</string>
    <string name="title_disable_delay_ssh" translatable="false">Disable TCP Delay</string>
    <string name="summary_disable_delay_ssh" translatable="false">If enabled there will be no delays between requests, which can improve the ping or even the connection speed.</string>
    <string name="title_tethering_subnet" translatable="false">Tethering Subnet (beta)</string>
    <string name="summary_tethering_subnet" translatable="false">Enable if you are having problems to share the internet from your device.</string>
    <string name="wakelock_summary" translatable="false">Activate only if application is stopping working on its own, as happens when locking the screen on some devices.</string>
    <string name="zero_kb">0kb</string>

    <string name="label_claim">CLAIM REWARD</string>
    <string name="label_retry">RETRY</string>
    <string name="action_update_resources">Update Resources</string>
    <string name="nav_title_identity">Identification</string>
    <string name="nav_title_payload">Payload Generator</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_community">Community</string>
    <string name="nav_title_about">About</string>
    <string name="nav_title_clear_app_data">Clear App Data</string>
    <string name="nav_title_custom_server">Custom Server</string>
    <string name="nav_restore_data">Restore Data</string>

    <!--- About App -->
    <string name="head1">Terms of Use</string>
    <string name="head2">1. Responsibility.</string>
    <string name="head3">2. Service warranty.</string>
    <string name="head4">3. Privacy.</string>
    <string name="text1">By using this program, you agree to all of the quotations below.</string>
    <string name="text2">Consider this program as a network tool that ensures security and anonymity and enables you to customize the start of the connection to the server.With the start of the custom connection, it is possible to bypass restrictions imposed on any type of internet network.</string>
    <string name="text3">The user is responsible for any damage caused to a network that is vulnerable to this technique and is also responsible for the damage caused to itself (charges, processes…).</string>
    <string name="text4">We use the SSH 2.0, TLS and P2P protocols to cover the entire connection between client and server, so our service is susceptible to the same flaws and vulnerabilities present in this technology.</string>
    <string name="text5">We do not guarantee full connection stability or full server availability, but we will do everything possible to make everything work well.</string>
    <string name="text6">It collects statistics of usage and crash reports, collected by Google Play, Firebase…</string>
    <string name="text7">It also collects search history and geographic location for advertisement selection.</string>
    <string name="delete_logs">Delete logs</string>
    <string name="share_logs">Share Logs</string>

</resources>