<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.google.android.material.card.MaterialCardView
            app:cardBackgroundColor="@color/card_background"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            app:cardCornerRadius="5.0dip">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textSize="12.0sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4.0dip"
                    android:text="@string/label_file_name"
                    android:layout_marginStart="6.0dip"
                    android:letterSpacing="0.1" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInput_fileName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textFilter|textNoSuggestions"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_file_name"
                        android:scrollbars="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6.0dip"
                        android:layout_marginRight="6.0dip"
                        android:maxLines="1"
                        android:inputType="textFilter|textNoSuggestions"
                        android:overScrollMode="always" />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/cb_message"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8.0dip"
                    android:text="@string/label_message" />

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="8.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textSize="12.0sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4.0dip"
                        android:text="@string/label_description"
                        android:layout_marginStart="6.0dip"
                        android:letterSpacing="0.1" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textFilter|textMultiLine|textNoSuggestions"
                        android:overScrollMode="always"
                        app:counterEnabled="true"
                        app:counterMaxLength="250"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                        <com.google.android.material.textfield.TextInputEditText
                            android:enabled="false"
                            android:scrollbarStyle="insideInset"
                            android:textSize="18.0sp"
                            android:gravity="top"
                            android:id="@+id/et_message"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="6.0dip"
                            android:layout_marginRight="6.0dip"
                            android:minHeight="120.0dip"
                            android:singleLine="true"
                            android:maxLength="250"
                            android:inputType="textFilter|textMultiLine|textNoSuggestions"
                            android:overScrollMode="always" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="8.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textSize="12.0sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4.0dip"
                        android:text="@string/label_extras"
                        android:layout_marginStart="5.0dip"
                        android:letterSpacing="0.1" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0.0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0">

                            <CheckBox
                                android:enabled="false"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:minHeight="0.0dip"
                                android:text="@string/label_lock" />

                            <CheckBox
                                android:id="@+id/cb_mobile_data"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:minHeight="0.0dip"
                                android:text="@string/label_mobile_data" />

                            <CheckBox
                                android:id="@+id/cb_block_root"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:minHeight="0.0dip"
                                android:text="@string/label_block_root" />

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0.0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0">

                            <CheckBox
                                android:id="@+id/cb_password"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:minHeight="0.0dip"
                                android:text="@string/label_password" />

                            <CheckBox
                                android:id="@+id/cb_hwid"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:minHeight="0.0dip"
                                android:text="@string/label_hwid_lock" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <CheckBox
                                    android:id="@+id/cb_validity_check"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:minHeight="0.0dip"
                                    android:text="@string/label_expire_date"
                                    android:singleLine="true" />

                                <TextView
                                    android:id="@+id/tv_validity"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="5dp"
                                    android:gravity="center"
                                    android:text="@string/label_unknown"
                                    android:textStyle="bold"
                                    android:visibility="invisible" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lay_HWID"
                    android:orientation="vertical"
                    android:padding="8.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textSize="12.0sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4.0dip"
                        android:text="@string/label_hwid"
                        android:layout_marginStart="6.0dip"
                        android:letterSpacing="0.1" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInput_hwid"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textFilter|textNoSuggestions"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_hwid"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="6.0dip"
                            android:layout_marginRight="6.0dip"
                            android:inputType="textFilter|textNoSuggestions"
                            android:maxLines="1"
                            android:overScrollMode="always"
                            android:scrollbars="vertical" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lay_password"
                    android:orientation="vertical"
                    android:padding="8.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textSize="12.0sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4.0dip"
                        android:text="@string/label_password"
                        android:layout_marginStart="6.0dip"
                        android:letterSpacing="0.1" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInput_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textFilter|textNoSuggestions"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:scrollbars="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="6.0dip"
                            android:layout_marginRight="6.0dip"
                            android:maxLines="1"
                            android:inputType="textFilter|textNoSuggestions"
                            android:overScrollMode="always" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


                <Button
                    android:textColor="@android:color/white"
                    android:id="@+id/btn_export"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="20.0dip"
                    android:layout_marginRight="10.0dip"
                    android:text="@string/label_export"
                    android:backgroundTint="@color/colorPrimary" />

                <TextView
                    android:textSize="10.0sp"
                    android:padding="2.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12.0dip"
                    android:layout_marginTop="5.0dip"
                    android:layout_marginRight="12.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:text="@string/label_export_note" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>